[gd_scene load_steps=3 format=3 uid="uid://d4h0uy0icakt"]

[ext_resource type="Script" uid="uid://bps2a5uo0jh7y" path="res://scripts/ui/intro_text.gd" id="1_l0aui"]
[ext_resource type="FontFile" uid="uid://bnl2tsb2chuqu" path="res://addons/google_fonts/VT323/VT323-Regular.ttf" id="2_nklji"]

[node name="IntroText" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l0aui")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0588235, 0.109804, 1)

[node name="Stars" type="CPUParticles2D" parent="."]
position = Vector2(640, 360)
amount = 300
lifetime = 8.0
preprocess = 8.0
emission_shape = 3
emission_rect_extents = Vector2(640, 360)
direction = Vector2(0, 1)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_max = 3.0
color = Color(1, 1, 1, 0.7)

[node name="FastStars" type="CPUParticles2D" parent="."]
position = Vector2(640, 360)
amount = 50
lifetime = 4.0
preprocess = 4.0
emission_shape = 3
emission_rect_extents = Vector2(640, 360)
direction = Vector2(0, 1)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(1, 1, 1, 0.9)

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -61.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_nklji")
theme_override_font_sizes/font_size = 32
text = "Confirm"

[node name="MessageBox" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 24.0
offset_right = 225.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_nklji")
theme_override_font_sizes/font_size = 24
autowrap_mode = 2

[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
